@@ -1,3 +1,7 @@
+2010-03-26  Levi Bard  <levi@unity3d.com>
+
+	* SoftDebuggerSession.cs: Handle assembly unload.
+
 2010-03-17  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* SoftDebuggerAdaptor.cs: Don't crash if something goes wrong
